Update .tex file

--- a/paper/alternative_work_arrangements.tex
+++ b/paper/alternative_work_arrangements.tex
@@ -72,7 +72,7 @@ This document contains my replication for the following paper: Mas, Alexandre, a
 \hypertarget{introduction}{%
 \section{Introduction}\label{introduction}}
 
-Estimate willingness to pay (WTP) \cite{10.1257/aer.20161500}.
+Estimate willingness to pay \cite{10.1257/aer.20161500}.
 
 \hypertarget{Conceptual and Econometric Framework}{%
 \section{Conceptual and Econometric Framework}\label{Conceptual and Econometric Framework}}
