Insert main figures in .tex file

--- a/paper/alternative_work_arrangements.tex
+++ b/paper/alternative_work_arrangements.tex
@@ -79,9 +79,53 @@ Estimate willingness to pay \cite{10.1257/aer.20161500}.
 
 Discrete choice experiments, logistic distribution for WTP
 
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width=180mm]{../bld/python/figures/fig_1_error_corrected_logit.png}
+    \caption{}
+    \label{fig:logistic_regression}
+    \end{figure}
+
+\pagebreak
+
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width=180mm]{../bld/python/figures/fig_2_error_corrected_logit.png}
+    \caption{}
+    \label{fig:logistic_regression}
+    \end{figure}
+
+\pagebreak
+
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width=180mm]{../bld/python/figures/fig_3_error_corrected_logit.png}
+    \caption{}
+    \label{fig:logistic_regression}
+    \end{figure}
+
+\pagebreak
+
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width=180mm]{../bld/python/figures/fig_4_error_corrected_logit.png}
+    \caption{}
+    \label{fig:logistic_regression}
+    \end{figure}
+
+\pagebreak
+
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width=180mm]{../bld/python/figures/fig_5_error_corrected_logit.png}
+    \caption{}
+    \label{fig:logistic_regression}
+    \end{figure}
+
+\pagebreak
+
 \hypertarget{Discussion and Conclusion}{%
 \section{Discussion and Conclusion}\label{Discussion and Conclusion}}
-
 
 \bibliographystyle{apacite}
 \bibliography{refs}
