--- a/paper/alternative_work_arrangements.tex
+++ b/paper/alternative_work_arrangements.tex
@@ -62,70 +62,143 @@ citecolor=citecolor,
 \date{\today}
 
 \maketitle
-\textbf{Minh Tri Hoang} \textbar{} ID:3291616 \textbar{} Master of Science in Economics, University of Bonn \\ \\
-This document contains my replication for the following paper: Mas, Alexandre, and Amanda Pallais. 2017. \href{https://www.aeaweb.org/articles?id=10.1257/aer.20161500}{Valuing Alternative Work Arrangements}. American Economic Review. 107 (12): 3722-59.
+\textbf{Minh Tri Hoang} \textbar{} ID: 3291616 \textbar{} Master of Science in Economics, University of Bonn \\ \\
+This report contains my replication for the following paper: Mas, Alexandre, and Amanda Pallais. 2017. \href{https://www.aeaweb.org/articles?id=10.1257/aer.20161500}{Valuing Alternative Work Arrangements}. American Economic Review. 107 (12): 3722-59.
 
 \tableofcontents
-
-\pagebreak
 
 \hypertarget{introduction}{%
 \section{Introduction}\label{introduction}}
 
-Estimate willingness to pay \cite{10.1257/aer.20161500}.
+There are several debates focusing on whether alternative work arrangements, such as working from home, flexible schedules, and part-time work should be encouraged to help employees make work-life balance. To shed some lights on the issue, \cite{10.1257/aer.20161500} adopted a discrete choice experiment through the recruitment process in US to estimate workers' willingness to pay for alternative work arrangements compared with standard work schedules. The results show that a majority of employees do not value the non-standard schedules. There are three main reasons why workers do not appreciate the flexibility. First, most employees prefer 40-hour-per-week jobs. Second, a large proportion of workers who are willing to accept lower wages for the option of working from home can dominate the effect of cutting wages. It implies that employers may need to pay more for this flexible option. Finally, workers' aversion levels to taking more flexible positions can give rise to their strong objections to the options.
+
+\hypertarget{Experimental Design}{%
+\section{Experimental Design}\label{Experimental Design}}
+
+The experiment was conducted during a hiring process through a national job search platform in US. The authors sent job advertisements, which refer work positions, important skills for jobs, and salary ranges, to job seekers. All information related to job schedule, location, employment duration was not mentioned on the advertisements. The authors adopted the discrete choice experiment where two job positions, baseline and alternative work arrangements, were assigned randomly to applicants. The options differed in job flexibility and hourly wages. The baseline position is associated with an onsite-work arrangement (40-hour, 9 AM-5 PM, Monday-Friday) while the alternative option has a more flexible schedule and the possibility of working remotely. Job seekers were asked to select the position they prefer. \\
+
+In the experiment, \cite{10.1257/aer.20161500} set up five different alternative arrangements:
+\begin{enumerate}
+    \item ``flexible schedule'': job seekers are allowed to make their own work schedules.
+    \item ``flexible number of hours'': job seekers can select the number of working hours they prefer.
+    \item ``work from home'': an option of working remotely.
+    \item ``combined flexible'': job seekers can select the number of working hours and work schedules.
+    \item ``employer discretion'': workers' schedules are decided by employers.
+\end{enumerate}
+
+As regards salary ranges, \cite{10.1257/aer.20161500} proposed a appropriate wage increments to take into account the low and high values of willingness to pay (WTP). \\
+
+The most challenging part of the discrete choice experiment is the presence of inattention in which some job applicants did not pay attention to the job descriptions. Ignoring important factors such as schedule flexibility or the possibility of remote work can give rise to bias in the WTP measurement and causal inference. Therefore, the authors came up with several econometric approaches associated with maximum likelihood estimation to measure inattention error rates and estimate the WTP distribution.
 
 \hypertarget{Conceptual and Econometric Framework}{%
-\section{Conceptual and Econometric Framework}\label{Conceptual and Econometric Framework}}
+\section{Econometric Framework}\label{Conceptual and Econometric Framework}}
 
-Discrete choice experiments, logistic distribution for WTP
+In the setting of the discrete choice experiment, a job seeker faces two different options: (i) job A = 0: the traditional work schedule and (ii) job A = 1: the flexible arrangement (amenity), associated with wage $w_0$ and $w_1$ respectively. \cite{10.1257/aer.20161500} defines $\Delta w = w_1 - w_0$ as the wage difference between the alternative and baseline positions. The authors argue that a job candidate accepts the alternative work arrangement if her willingness to pay exceeds the cost of the work amenity. It implies that:
+$$
+P_{\Delta w} \equiv \operatorname{Pr}\left(W T P_i>-\Delta w\right)
+$$
+To capture the effect of inattention rate $(2 \alpha)$, \cite{10.1257/aer.20161500} introduce a mixture model:
+
+\begin{equation}
+\operatorname{Pr}(A_i=1 | \Delta w) = P_{\Delta w}(1-\alpha)+(1-P_{\Delta w}) \alpha =F(b \Delta w+c, \mu, \sigma)(1-2 \alpha)+\alpha
+\end{equation}
+
+Where $F(.)$ is the CDF of a worker's willingness to pay while b, c, $\mu$, and $\sigma$ are parameters which characterize the WTP distribution. Parameter $\alpha$ can be estimated based on authors' knowledge of which job position is taken into account as the dominated option. In particular, the authors propose an estimator for $\alpha$:
+\begin{equation}
+\hat{\alpha} = 1 - \hat{E}[Y|\Delta w = 5]
+\end{equation}
+where Y is the binary variable representing a worker's personal choice of a specific position. $\hat{E}[Y|\Delta w = 5]$ can be measured through the linear regression:
+\begin{equation}
+Y = \gamma + \beta \Delta w + \eta_{\Delta w}
+\end{equation}
+After obtaining regression coefficients of $\gamma$ and $\beta$, the authors plug $\Delta w = 5$ into the fitted regression to estimate $\hat{E}[Y|\Delta w = 5] = \hat{\gamma} + \hat{\beta} \Delta w = \hat{\gamma} + 5 \hat{\beta}$. That is the reason why the authors wrote $\hat{\alpha} = 1 - (\hat{\gamma} + 5 \hat{\beta})$ in the original paper. Since equation (1) can also be written as:
+\begin{equation}
+Y_{\Delta w} = P_{\Delta w}(1-\alpha)+(1-P_{\Delta w}) \alpha = P_{\Delta w}(1-2\alpha)+\alpha
+\end{equation}
+It implies that the estimator of the share of job applicants associated with $P_{\Delta w}$ can be derived as:
+\begin{equation}
+\tilde{Y}_{\Delta w} \equiv \frac{Y_{\Delta w}-\hat{\alpha}}{1-2 \hat{\alpha}}
+\end{equation}
+However, the standard logistic regression is not sufficient to capture more complicated relationships between $\tilde{Y}$ and $\Delta w$, \cite{10.1257/aer.20161500} come up with a new method called the breakpoint model.
+\begin{equation}
+E[\tilde{Y} \mid \Delta w]= \begin{cases}1 & \text { if } \Delta w>w^* \\ F\left(b \Delta w+c, \mu, \sigma\right)(1-2 \alpha)+\alpha & \text { if } \Delta w \leq w^*\end{cases}
+\end{equation}
+
+Figures 1-5 show the main results of applicants' willingness to pay to work alternative arrangements that I replicated from \cite{10.1257/aer.20161500}. My replication results are almost the same as those in the original paper. I also tried to replicate main tables used in the paper, which include tables 1, 3, 5, 6, 7, and 8. Please find the information on the structure of the output folder, which contains final datasets, figures, and tables via \href{https://github.com/mtrihoang/valuing_alternative_work_arrangements/blob/main/README.md}{README}. \\
+
+I also estimated WTP without using the error correction (figures 6-10) to make a comparison between maximum likelihood estimations and grasp more insights into how the standard logit model cannot capture the extreme nonlinearity in $\tilde{Y}$, \cite{10.1257/aer.20161500}.
 
 \begin{figure}[h!]
     \centering
     \includegraphics[width=180mm]{../bld/python/figures/fig_1_error_corrected_logit.png}
-    \caption{}
-    \label{fig:logistic_regression}
+    \caption{WTP for Flexible Schedule (Corrected for Inattention)}
+    \label{fig:logistic_regression_1}
     \end{figure}
-
-\pagebreak
 
 \begin{figure}[h!]
     \centering
     \includegraphics[width=180mm]{../bld/python/figures/fig_2_error_corrected_logit.png}
-    \caption{}
-    \label{fig:logistic_regression}
+    \caption{WTP for Flexible Number of Hours (Corrected for Inattention)}
+    \label{fig:logistic_regression_2}
     \end{figure}
-
-\pagebreak
 
 \begin{figure}[h!]
     \centering
     \includegraphics[width=180mm]{../bld/python/figures/fig_3_error_corrected_logit.png}
-    \caption{}
-    \label{fig:logistic_regression}
+    \caption{WTP to Work from Home (Corrected for Inattention)}
+    \label{fig:logistic_regression_3}
     \end{figure}
-
-\pagebreak
 
 \begin{figure}[h!]
     \centering
     \includegraphics[width=180mm]{../bld/python/figures/fig_4_error_corrected_logit.png}
-    \caption{}
-    \label{fig:logistic_regression}
+    \caption{WTP for Combined Flexible Job (Corrected for Inattention)}
+    \label{fig:logistic_regression_4}
     \end{figure}
-
-\pagebreak
 
 \begin{figure}[h!]
     \centering
     \includegraphics[width=180mm]{../bld/python/figures/fig_5_error_corrected_logit.png}
-    \caption{}
-    \label{fig:logistic_regression}
+    \caption{WTP to Avoid Employer Discretion (Corrected for Inattention)}
+    \label{fig:logistic_regression_5}
+    \end{figure}
+
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width=180mm]{../bld/python/figures/fig_1_standard_logit.png}
+    \caption{WTP for Flexible Schedule (Non-corrected for Inattention)}
+    \label{fig:logistic_regression_6}
+    \end{figure}
+
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width=180mm]{../bld/python/figures/fig_2_standard_logit.png}
+    \caption{WTP for Flexible Number of Hours (Non-corrected for Inattention)}
+    \label{fig:logistic_regression_7}
+    \end{figure}
+
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width=180mm]{../bld/python/figures/fig_3_standard_logit.png}
+    \caption{WTP to Work from Home (Non-corrected for Inattention)}
+    \label{fig:logistic_regression_8}
+    \end{figure}
+
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width=180mm]{../bld/python/figures/fig_4_standard_logit.png}
+    \caption{WTP for Combined Flexible Job (Non-corrected for Inattention)}
+    \label{fig:logistic_regression_9}
+    \end{figure}
+
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width=180mm]{../bld/python/figures/fig_5_standard_logit.png}
+    \caption{WTP to Avoid Employer Discretion (Non-corrected for Inattention)}
+    \label{fig:logistic_regression_10}
     \end{figure}
 
 \pagebreak
-
-\hypertarget{Discussion and Conclusion}{%
-\section{Discussion and Conclusion}\label{Discussion and Conclusion}}
 
 \bibliographystyle{apacite}
 \bibliography{refs}
